# RootPA

./: README.md
lib/2020-3A-IABD1-Correction_modele_lineaire/: CMakeLists.txt  LinearModel.cpp  LinearModel.h  library.cpp  library.h
lib/TestApplication/: TestApplication.sln
lib/TestApplication/Debug/: TestApplication.ilk
lib/TestApplication/TestApplication/: Layer.h  MLP.cpp  MLP.h  MlpService.cpp  MlpService.h  TestApplication.cpp  TestApplication.vcxproj  TestApplication.vcxproj.filters
lib/TestApplication/TestApplication/Debug/: vc142.idb
lib/TestApplication/TestApplication/Debug/TestApplication.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TestApplication.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lib/TestApplication/TestApplication/x64/Debug/: vc142.idb
lib/TestApplication/TestApplication/x64/Debug/TestApplication.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TestApplication.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lib/TestApplication/x64/Debug/: TestApplication.ilk
lib/[Exemples]MLP In Pure Python And Keras Underhood/: basic_tensorflow.py  basic_tensorflow_graph_mode.py  basic_tensorflow_simple_linear_iterative_regression.py  basic_tensorflow_simple_linear_iterative_regression_with_optimizer.py  basic_tensorflow_simple_linear_iterative_regression_with_optimizer_and_custom_dense_layer.py  basic_tensorflow_test_differentiation.py  test_mlp_in_pure_python.py
lib/testmlp/: Mlp.java  test.java
utils/: convert_image.py  convertor.py  testdataset.py
(+1 files in other folders)
